2010-02-10  vadim  <vadim@vk.crocodile.org>

	* ../src/gui/ProjectPanel_events.cpp (ProjectPanel::event): this
	change attempts to fix a bug that causes main menu item Edit /
	Paste (keyboard shortcut Ctrl-V) to stop working. The bug is hard
	to reproduce and we were not able to find reliable scenario to
	trigger it.

	* PolicyCompiler_ipt.cpp (specialCaseWithFWInDstAndOutbound::processNext):
	fixes #1220 "bridging fw rule using all multicast object in
	destination does not produce any iptables rules".

2010-02-07  vadim  <vadim@vk.crocodile.org>

	* src/gui/ClusterGroupDialog.cpp (ClusterGroupDialog::applyChanges):
	fixes #1215 "Edit protocol parameters" button gets disabled for no
	reason. This button would get disabled after certain manipulations
	in the cluster group object dialog even when no changes were made.

	* FWCmdChange.cpp (FWCmdChangeOptionsObject::notify): fixes #1212
	Cluster object was not marked for recompile when user edited
	conntrack group parameters

2010-02-06  vadim  <vadim@vk.crocodile.org>

	* src/pflib/PolicyCompiler_pf_writers.cpp (PrintRule::processNext):
	fixes #1210 "syntax error in PF rule - "modulate state" is
	required".  Per bug reported in the mailing list (and according to
	the pf.conf manual), pf.conf requires "keep state", "modulate
	state" or "synproxy"if any of the stateful tracking options are
	used in the rule. These include "max", "no-sync", "pflow",
	"sloppy", "source-track" and others.

	* src/pflib/PolicyCompiler_pf_writers.cpp (PrintRule::processNext):
	fixes #1209 "incorrect syntax in PF rules when only "Activate
	source tracking" option is on". Compiler sometimes generated empty
	"( )" in the end of the pf.conf line when there were no state
	tracking options

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::insertConntrackRule):
	fixes #1175 "There is no option for unicast on conntrac
	sync-group (like heartbeat)". User can now choose between multicast
	and unicast for conntrackd communication.
